deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: churchball

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churchball
  namespace: churchball
spec:
  replicas: 1
  selector:
    matchLabels:
      app: churchball
  template:
    metadata:
      labels:
        app: churchball
    spec:
      containers:
      - name: churchball
        image: harbor.skvnent.duckdns.org/churchball/churchball-python:0.10
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: churchball-db-config
            mountPath: /db
      - name: nginx
        image: nginx@sha256:0f859db466fda2c52f62b48d0602fb26867d98edbd62c26ae21414b3dea8d8f4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: churchball-nginx-config
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: churchball-nginx-config
          persistentVolumeClaim:
            claimName: churchball-nginx-conf-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: churchball
  namespace: churchball
spec:
  selector:
    app: churchball
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: churchball
spec:
  selector:
    app: churchball
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: churchball-ingress
  namespace: churchball
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`churchball.skvnent.duckdns.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
